--- a/all-style.css
+++ b/all-style.css
@@ -23,6 +23,7 @@
     height: 80px;
     font-size: 64px;
     padding: 8px;
+    text-decoration: none;
 }
 
 .writer{
@@ -36,6 +37,7 @@
     font-size: 32px;
     line-height: 80px;
     text-align: center;
+    text-decoration: none;
 }
 
 .kankoti{
@@ -49,6 +51,7 @@
     font-size: 32px;
     line-height: 80px;
     text-align: center;
+    text-decoration: none;
 }
 
 .men{
@@ -62,6 +65,7 @@
     font-size: 32px;
     line-height: 80px;
     text-align: center;
+    text-decoration: none;
 }
 
 .cyomei{
@@ -75,6 +79,7 @@
     font-size: 32px;
     line-height: 80px;
     text-align: center;
+    text-decoration: none;
 }
 
 .movie{
@@ -88,6 +93,7 @@
     font-size: 32px;
     line-height: 80px;
     text-align: center;
+    text-decoration: none;
 }
 
 body{
